--- a/app/views/resolutions/new.html.erb
+++ b/app/views/resolutions/new.html.erb
@@ -86,7 +86,7 @@
     <div class="large-5 columns">
       <%= f.label :title, "Title of the resolution", class: "form-label" %>
       <br/>
-      <%= f.text_field :title %>
+      <%= f.text_field :title, :autofocus => true %>
     </div>
   </div>
 
