--- a/app/views/resolutions/index.html.erb
+++ b/app/views/resolutions/index.html.erb
@@ -103,7 +103,7 @@
   <% if @resolutions.count == 0 %>
     <div class="row">
       <div class="large-12 columns no-resolutions" >
-        <p>There are no registered resolutions yet.</p>
+        <p>There are no uploaded resolutions yet.</p>
       </div>
     </div>
   <% end %>
