fixed undebated icon

--- a/app/views/resolutions/show.html.erb
+++ b/app/views/resolutions/show.html.erb
@@ -121,7 +121,7 @@
           </div>
         <% elsif @resolution.status_id == 5 %>
           <div class="resolution-status1 undebated">
-            <p><i class="fa fa-check"></i> Undebated</p>
+            <p><i class="fa fa-minus"></i> Undebated</p>
           </div>
         <% end %>
       </div>
