fixed undebated icon

--- a/app/views/resolutions/index.html.erb
+++ b/app/views/resolutions/index.html.erb
@@ -137,7 +137,7 @@
         </div>
       <% elsif reso.status_id == 5 %>
         <div class="large-2 columns resolution-status undebated">
-          <p><i class="fa fa-check"></i> Undebated</p>
+          <p><i class="fa fa-minus"></i> Undebated</p>
         </div>
       <% end %>
     </div>
